# ez_wasm_bindgen_static_closure

./: Cargo.toml  README.md
src/: lib.rs
