[package]
name = "ez_wasm_bindgen_static_closure"
authors = ["zperk13"]
edition = "2021"
description = "A macro to make thread_local static wasm-bindgen closures easier to make"
repository = "https://github.com/zperk13/ez_wasm_bindgen_static_closure"
license = "MIT OR Apache-2.0"

[lib]
proc_macro=true

[dependencies]
wasm-bindgen = "0.2.81"
syn = "1.0.98"
quote = "1.0.20"
